--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <!-- Linking Font Awesome for icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        .about-image {
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <!-- Header / Navbar-->
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
-                <img src="images/logo.png" alt="Logo" class="logo-image">
+                <img src="images/logo_white.png" alt="Logo" class="logo-image">
                 <h2 class="logo-text">Rever du monde</h2>
               </a>
             <ul class="nav-menu">
@@ -48,11 +56,10 @@
             <div class="section-content">
                 <div class="hero-details">
                     <h2 class="title">We are the best</h2>
-                    <h3 class="subtitle">Maybe we can save the earth
+                    <h3 class="subtitle">We can save the earth
                     from today!</h3>
                     <p class="description">Welcome to |Rever du monde|,
-                        I'am glad to sell you our product. Our product is 
-                        Eco-friendly. We used discarded clothes to make stylish clothes which you love.</p>
+                        I'am glad to sell you our product. We used discarded clothes to make stylish clothes which you love.</p>
 
                     <div class="buttons">
                         <a href="#" class="button order-now">Order Now</a>
@@ -64,6 +71,76 @@
                 </div>
             </div>
         </section>
+
+        <!-- About section-->
+        <section class="about-section">
+            <div class="section-content">
+                <div class="about-image-wrapper">
+                    <img src="images/dining.jpg" alt="About" class="about-image">
+                </div>
+                <div class="about-details">
+                    <h2 class="section-title">About Us</h2>
+                    <p class="text">blablablablablablablablablablablablablablabla
+                        blablablablablablablablablablablablablablablablablabla
+                        blablablablablablablablablablablablablablablablablabla
+                        blablablablablablablablabla
+                    </p>
+                    <div class="social-link-list">
+                        <a href="#" class="social-link"><i class="fa-brands fa-facebook">
+                        </i></a>
+                        <a href="#" class="social-link"><i class="fa-brands fa-instagram">
+                        </i></a>
+                        <a href="#" class="social-link"><i class="fa-brands fa-x-twitter">
+                        </i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Menu seciton -->
+         <section class="menu-section">
+            <p class="section-title">Our product</p>
+            <div class="section-content">
+                <ui class="menu-list">
+                    <li class="menu-item">
+                        <img src="images/tshirt_.png" alt="Tshirt_before" 
+                        class="menu-image">
+                        <h2 class="name">t-shirt Before</h2>
+                        <p class="text"> A t-shirt that is untouched by our hands</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="images/tshirt_after.png" alt="Tshirt_after" 
+                        class="menu-image">
+                        <h2 class="name">t-shirt After</h2>
+                        <p class="text"> A t-shirt that is touched by our hands</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="images/sweatshirt_.png" alt="Sweatshirt_before" 
+                        class="menu-image">
+                        <h2 class="name">sweatshirt Before</h2>
+                        <p class="text"> A sweatshirt that is untouched by our hands</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="images/sweatshirt_after.png" alt="Sweatshirt_after" 
+                        class="menu-image">
+                        <h2 class="name">sweatshirt After</h2>
+                        <p class="text"> A sweatshirt that is touched by our hands</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="images/tanktop_.png" alt="Tanktop_before" 
+                        class="menu-image">
+                        <h2 class="name">tanktop Before</h2>
+                        <p class="text"> A tanktop that is untouched by our hands</p>
+                    </li>
+                    <li class="menu-item">
+                        <img src="images/tanktop_after.png" alt="Tanktop_after" 
+                        class="menu-image">
+                        <h2 class="name">tanktop After</h2>
+                        <p class="text"> A tanktop that is touched by our hands</p>
+                    </li>
+                </ui>
+            </div>
+         </section>
     </main>
 
     <script src="script.js"></script>
