--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
-                    <p class="text">blablablablablablablablablablablablablabla
-                        blablablablablablablablablabla
-                        blablablablablablablablabla
+                    <p class="text">We are a group of high school students passionate about fashion and sustainability. Our project is all about giving discarded clothes a new life by transforming them into stylish, one-of-a-kind pieces. Every item in our collection is handmade with creativity and care, proving that fashion can be both trendy and eco-friendly. Join us in making a difference
                     </p>
                     <div class="social-link-list">
                         <a href="#" class="social-link"><i class="fa-brands fa-facebook">
