--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="hero-section">
             <div class="section-content">
                 <div class="hero-details">
-                    <h2 class="title">We are the best</h2>
+                    <h2 class="title">We can do it!</h2>
                     <h3 class="subtitle">We can save the earth
                     from today!</h3>
                     <p class="description">Welcome to |Rever du monde|,
