--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>|Rever du monde|</title>
-    <!-- Linking Font Awesome for icons-->
+    <link rel="icon" href="images/logo_white.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -136,6 +136,39 @@
                         <p class="text"> A tanktop that is touched by our hands</p>
                     </li>
                 </ui>
+            </div>
+         </section>
+
+         <!--Testimonials-section-->
+         <section class="testimonials-section">
+            <h2 class="section-title">Testimonials</h2>
+            <div class="section-content">
+                <div class="slider-container">
+                    <div class="slider-wrapper">
+                        <ul class="testimonials-list">
+                            <li class="testimonials">
+                                <img src="images/user.png" alt="User" class="user-image">
+                                <h3 class="name">User_1</h3>
+                                <i class="feedback">something</i>
+                            </li>
+                            <li class="testimonials">
+                                <img src="images/user.png" alt="User" class="user-image">
+                                <h3 class="name">User_1</h3>
+                                <i class="feedback">something</i>
+                            </li>
+                            <li class="testimonials">
+                                <img src="images/user.png" alt="User" class="user-image">
+                                <h3 class="name">User_1</h3>
+                                <i class="feedback">something</i>
+                            </li>
+                            <li class="testimonials">
+                                <img src="images/user.png" alt="User" class="user-image">
+                                <h3 class="name">User_1</h3>
+                                <i class="feedback">something</i>
+                            </li>
+                        </ul>
+                    </div> 
+                </div>
             </div>
          </section>
     </main>
