--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 
-    <style>
-        .about-image {
-            width: 100%;
-            max-width: 500px;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
     <!-- Header / Navbar-->
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
-                <img src="images/logo_white.png" alt="Logo" class="logo-image">
+                <img src="images/logo.png" alt="Logo" class="logo-image">
                 <h2 class="logo-text">Rever du monde</h2>
               </a>
             <ul class="nav-menu">
@@ -61,16 +55,18 @@
                     from today!</h3>
                     <p class="description">Welcome to |Rever du monde|,
                         I'am glad to sell you our product. We used discarded clothes to make stylish clothes which you love.</p>
-
-                    <div class="buttons">
+                        <div class="bg-video">
+                            <video class="bg-video__content" autoplay muted loop>
+                              <source src="./video/herosection.mp4" type="video/mp4" />
+                            </video>
+                          </div>
+                        <div class="buttons">
                         <a href="#" class="button order-now">Order Now</a>
                         <a href="#" class="button Contact-us">Contact Us</a>
                     </div>
                 </div>
-                <div class="hero-image-wrapper">
-                    <img src="images/clothes2.png.png" alt="Hero" class="hero-image">
-                </div>
             </div>
+            
         </section>
 
         <!-- About section-->
@@ -142,40 +138,43 @@
          <section class="testimonials-section">
             <h2 class="section-title">Testimonials</h2>
             <div class="section-content">
-                <div class="slider-container swiper">
-                    <div class="slider-wrapper">
-                        <ul class="testimonials-list swiper-wrapper">
-                            <li class="testimonial swiper-slide">
-                                <img src="images/user.png" alt="User" class="user-image">
-                                <h3 class="name">morty</h3>
-                                <i class="feedback">something</i>
-                            </li>
-                            <li class="testimonial swiper-slide">
-                                <img src="images/user.png" alt="User" class="user-image">
-                                <h3 class="name">Changwong</h3>
-                                <i class="feedback">something</i>
-                            </li>
-                            <li class="testimonial swiper-slide">
-                                <img src="images/user.png" alt="User" class="user-image">
-                                <h3 class="name">Kimjibab</h3>
-                                <i class="feedback">something</i>
-                            </li>
-                            <li class="testimonia swiper-slide">
-                                <img src="images/user.png" alt="User" class="user-image">
-                                <h3 class="name">baobab</h3>
-                                <i class="feedback">something</i>
-                            </li>
-                        </ul>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide testimonial">
+                            <img src="images/user.png" alt="User" class="user-image">
+                            <h3 class="name">Morty</h3>
+                            <i class="feedback">something</i>
+                        </div>
+                        <div class="swiper-slide testimonial">
+                            <img src="images/user.png" alt="User" class="user-image">
+                            <h3 class="name">Changwong</h3>
+                            <i class="feedback">something</i>
+                        </div>
+                        <div class="swiper-slide testimonial">
+                            <img src="images/user.png" alt="User" class="user-image">
+                            <h3 class="name">Kimjibab</h3>
+                            <i class="feedback">something</i>
+                        </div>
+                        <div class="swiper-slide testimonial">
+                            <img src="images/user.png" alt="User" class="user-image">
+                            <h3 class="name">Baobab</h3>
+                            <i class="feedback">something</i>
+                        </div>
+                    </div>
 
-                        <div class="swiper-pagination"></div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div> 
+                    <!-- Swiper buttons -->
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
-         </section>
+        </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
